# practice

./: .gitignore  pyproject.toml  render.yaml  start.sh  task_manager.py
fastapi_learning/db_async/: config.py  start.sh  task_manager.py  tasks.db
