[project]
name = "programs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyngrok>=7.2.12",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
